HW13-k8s-03-config/microk8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lesson-deployment
  labels:
    app: lesson13-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lesson13-3
  template:
    metadata:
      labels:
        app: lesson13-3
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
          name: index-html
      - name: multitool
        image: wbitt/network-multitool
      volumes:
      - name: index-html
        configMap:
          name: cm-index
