HW13-k8s-03-config/microk8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: lesson13-3
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
    - name: http-m
      protocol: TCP
      port: 1180
      targetPort: 1180
    - name: https-m
      protocol: TCP
      port: 11443
      targetPort: 11443
